--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,4 +6,5 @@ search: false
 @charset "utf-8";
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
-@import "minimal-mistakes"; // main partials
+@import "minimal-mistakes";
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR&display=swap'); // main partials
